# ata-builders-agent

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: tests.yml
src/task_agent/: agent.py  cli.py  interpreter.py  llm.py  models.py  tools.py
tests/: test_agent.py
