[project]
name = "task-agent"
version = "0.1.0"
description = "Take-home assignment: a task execution AI agent with planning, clarification, mock tools, and failure handling."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Yusuf" }]
dependencies = []

[project.scripts]
task-agent = "task_agent.cli:main"

[build-system]
requires = ["uv_build>=0.8.0,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pytest>=8.0.0"]
